# Ai-integrations-portfolio

./: 7074  CLAUDE.md  CONTRIBUTING.md  README.md
docs/: p1_prd.md  p1_sprints.md  project_prd_template.md  projects_overview.md
p1-lead-enrichment/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
p1-lead-enrichment/.github/: pull_request_template.md
p1-lead-enrichment/alembic/: env.py
p1-lead-enrichment/alembic/versions/: 0001_create_leads_table.py  0002_create_hubspot_tokens_table.py
p1-lead-enrichment/app/: main.py
p1-lead-enrichment/app/api/: auth.py  webhook.py
p1-lead-enrichment/app/core/: database.py  enums.py  settings.py
p1-lead-enrichment/app/models/: hubspot_token.py  lead.py
p1-lead-enrichment/app/schemas/: auth.py  webhook.py
p1-lead-enrichment/app/services/: hubspot.py  hubspot_contacts.py  lead_store.py  webhook_processor.py
p1-lead-enrichment/app/workers/: tasks.py
p1-lead-enrichment/tests/unit/: test_hubspot.py  test_hubspot_contacts.py  test_lead_store.py  test_webhook_processor.py
p2-invoice-intelligence/: README.md
p3-content-automation/: README.md
p4-bi-agent/: README.md
